# bitter-lesson-cvpr

./: .gitignore  README.md  bitter-lesson-cvpr.code-workspace  icc-inter-rator-anlysis.py  krippendorff-inter-rator-analysis.py  prompt.txt  pyproject.toml  regression-analysis.py  stratified-regression.py  thecvf_scraper.py
dbs/: cvpr_papers.db  icml_papers.db  neurips_papers.db
notebooks/: nlp4science_plots.py  plots.py
refs/: comparing-llm-wrappers-in-python.md
src/bitter_lesson_cvpr/: __init__.py  paper_digest_scraper.py  scraper.py  semantic_scholar.py  semantic_scholar_api_call.py  semantic_scholar_icml.py
src/bitter_lesson_cvpr/llm_evaluation/: evaluate_abstracts.py  evaluate_abstracts_icml.py  evaluate_abstracts_v2.py  prompt_templates.py  prompt_v2.py
src/bitter_lesson_cvpr/scrapers/: cvpr_dplb.py  neurips_scraper.py  thecvf_scraper.py
src/bitter_lesson_cvpr/utils/: icml_bib2sqlite.py  json2sqlite.py  semantic_scholar.py  sqlite2json.py
