[project]
name = "bitter-lesson-cvpr"
version = "0.1.0"
description = "Some exploration on CVPR digest to see how community has embraced the \"Bitter Lesson\""
authors = [
    { name = "Mojtaba Yousefi", email = "mojtaba.yousefi@live.com" }
]
dependencies = [
    "magentic>=0.26.0",
    "ipykernel>=6.29.4",
    "plotly>=5.22.0",
    "dash>=2.17.1",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bitter_lesson_cvpr"]
