[project]
name = "bitter-lesson-cvpr"
version = "0.1.0"
description = "Some exploration on CVPR digest to see how community has embraced the \"Bitter Lesson\""
authors = [
    { name = "Mojtaba Yousefi", email = "mojtaba.yousefi@live.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "selenium>=4.21.0",
    "semanticscholar>=0.8.2",
    "aiohttp>=3.9.5",
    "asyncio>=3.4.3",
    "tqdm>=4.66.4",
    "python-dotenv>=1.0.1",
    "magentic[anthropic]>=0.26.0",
    "webdriver-manager>=4.0.1",
    "ipykernel>=6.29.4",
    "plotly>=5.22.0",
    "pandas>=2.2.2",
    "nbformat>=5.10.4",
    "statsmodels>=0.14.2",
    "bibtexparser>=1.4.1",
    "anthropic==0.28.1",
    "seaborn>=0.13.2",
    "kaleido>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bitter_lesson_cvpr"]
